--- a/HomeMovie/views/Home.html
+++ b/HomeMovie/views/Home.html
@@ -95,7 +95,7 @@
 						</div>
 					</div>
 				</li>
-			</ul>-->
+			</ul>
 
 			<dl class="Movie_menu">
 				<dt>&nbsp;&nbsp;大陆<a href="#/Mainland">更多...</a></dt>
@@ -114,7 +114,7 @@
 			</dl>
 
 			<dl class="Movie_menu">
-				<dt>&nbsp;&nbsp;港台<a href="#">更多...</a></dt>
+				<dt>&nbsp;&nbsp;港台<a href="#/Hongkong">更多...</a></dt>
 				<dd>
 					<a href="#"><img src="img/Hongkong/bb1.jpg"></a>
 				</dd>
@@ -130,7 +130,7 @@
 			</dl>
 
 			<dl class="Movie_menu">
-				<dt>&nbsp;&nbsp;欧美<a href="#">更多...</a></dt>
+				<dt>&nbsp;&nbsp;欧美<a href="#/America">更多...</a></dt>
 				<dd>
 					<a href="#"><img src="img/America/cc1.jpg"></a>
 				</dd>
@@ -146,7 +146,7 @@
 			</dl>
 
 			<dl class="Movie_menu">
-				<dt>&nbsp;&nbsp;动漫<a href="#">更多...</a></dt>
+				<dt>&nbsp;&nbsp;动漫<a href="#/Cartoon">更多...</a></dt>
 				<dd>
 					<a href="#"><img src="img/Cartoon/dd1.jpg"></a>
 				</dd>
